Forward javac notes, including the multi-line ones
The two javac back-ends disagreed. In-process compilation maps
Diagnostic.Kind.NOTE to CompilerMessage.Kind.NOTE, so notes reach the build
log; the forked path threw them away with a comment about JDK 1.5 and
-Xlint:deprecation. Forwarding them makes the two agree and brings back the
"Recompile with -Xlint:deprecation for details" hints that #183 asks for.
The idea, and the one-line form of it, come from #312.

Notes cannot simply be emitted line by line. javac can wrap one over several
lines, indenting every line but the first:

    Note: Annotation processing is enabled because one or more processors
      were found on the class path. A future release of javac may disable
      ...

No classifier matches those continuation lines, so they landed in the
unclassified buffer, and once that buffer is non-empty every following line
joins it - which is why the note used to reappear glued to the front of the
next warning. Since 880da00f a failing compile reports that buffer as an
error, so a project with an annotation processor on the class path could get
a compiler error assembled out of note text. A note is therefore held back
until a line arrives that does not continue it.

That particular note belongs to JDK 21 and 22 only: JDK 23 made annotation
processing opt-in, and JDK 25 stays silent even with a processor on the
class path. The handling is general because nothing stops a future note from
wrapping.

Do not tighten the continuation test into a match against the note's own
wording, which is localised and changes between releases.

Verified: mvn clean install on JDK 25, whole reactor green.